--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -44,6 +44,15 @@
             <%= fa_icon "shopping-cart" %> My Cart (<%= cart.size %>)
           <% end %>
         </li>
+        <li>
+          <%= link_to 'SIGN UP', :signup %>
+        </li>
+        <li>
+          <%= link_to 'LOGIN', :login %>
+        </li>
+        <li>
+          <%= link_to 'LOGOUT', :root %>
+        </li>
       </ul>
     </div>
   </div>
