--- a/app/views/orders/_lineItems.html.erb
+++ b/app/views/orders/_lineItems.html.erb
@@ -2,7 +2,7 @@
     <td>
       <h4><%= line_item.product.name %></h4>
       <br>
-      <%= line_item.product.image %>
+      <%= image_tag line_item.product.image.tiny %>
     </td>
 
     <td>
@@ -14,6 +14,6 @@
     </td>
 
     <td>
-      <%= line_item.item_price_cents %>
+      <%= humanized_money_with_symbol line_item.item_price_cents / 100.0 %>
     </td>
   </tr>
