--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -67,6 +67,10 @@
       <% end %>
     </div>
 
+    <div>
+      Overall review: <%= @overall_review %>/5
+    </div>
+
   </article>
 
 </section>
