--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,4 +8,8 @@
   Password Confirmation: <%= f.password_field :password_confirmation %>
   <%= f.submit "Submit" %>
 
+  <% if flash[:notice] %>
+    <div class="notice"><%= flash[:notice] %></div>
+  <% end %>
+
 <% end %>
